ported all endpoints to new db lib
