# swagger.yaml
@@ -68,6 +68,8 @@ paths:
   /teams:
     get:
       summary: Returns a list of teams.
+      security:
+        - bearerAuth: []
       parameters:
         - name: search
           in: query
@@ -109,6 +111,8 @@ paths:
   /teams/{id}:
     get:
       summary: 'Returns a team object by id.'
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -282,6 +286,8 @@ paths:
   /users:
     get:
       summary: Returns a list of users.
+      security:
+        - bearerAuth: []
       parameters:
         - name: search
           in: query
@@ -300,6 +306,8 @@ paths:
   /users/{id}:
     get:
       summary: 'Returns a user object by id.'
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
